<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_enter_password">Регистрация программы</string>
    <string name="prompt_password">"введите пароль"</string>
    <string name="prompt_name">"введите имя"</string>
    <string name="action_sign_in">Воити</string>
    <string name="error_incorrect_name_or_password">Некорректное имя или пароль</string>
    <string name="error_no_internet">Проверьте интернет соединение</string>
    <string name="main_activity_notice">Для создания новой расходной накладной выберете нужный тип</string>
    <string name="app_name">Sim Card Service</string>
    <string name="newPacketButtonString">Стартовые пакеты</string>
    <string name="newVaucherButtonString">Ваучеры пополнения счёта</string>
    <string name="listOfAllNewButtonString">Новые накладные</string>
    <string name="listOfAllSynhButtonString">Архив накладных</string>
    <string name="exitButtonString">Выход</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_of_all">ListOfAllActivity</string>
    <string name="titleVaucherForm">Создание расходной накладной ваучеров пополнения счёта</string>
    <string name="titlePackageForm">Создание расходной накладной стартовых пакетов</string>
    <string name="titleVaucherFormEdit">Редактирование расходной накладной ваучеров пополнения счёта</string>
    <string name="titlePackageFormEdit">Редактирование расходной накладной стартовых пакетов</string>
    <string name="dataString">Дата*</string>
    <string name="torgPredstString">Торговый представитель*</string>
    <string name="pokupatelString">Покупатель*</string>
    <string name="torgPointString">Торговая точка*</string>
    <string name="primechanieString">Примечание</string>
    <string name="deleteLatestCharsString">Удалять последние символы в добавляемых серийных номерах</string>
    <string name="deleteLatestCharsString2">Удалять последние символы в добавляемых серийных номерах. Кол-во </string>
    <string name="nominalString">Номинал*</string>
    <string name="noAllFieldsPopulated">Заполните все поля, помеченные *</string>
    <string name="nominalSpinnerHintString">Выбрать номинал&#8230;</string>
    <string name="agentSpinnerHintString">Выбрать торгового&#8230;</string>
    <string name="buyerSpinnerHintString">Выбрать покупателя&#8230;</string>
    <string name="locationSpinneHintString">Выбрать точку&#8230;</string>
    <string name="no_nominalSpinnerHintString">Нет номиналов</string>
    <string name="no_agentSpinnerHintString">Нет торговых</string>
    <string name="no_buyerSpinnerHintString">Нет покупателей</string>
    <string name="no_locationSpinneHintString">Нет точек</string>
    <string name="addedNumbersString">Добавлено серийных номеров</string>
    <string name="addNumberString">Добавить серийный номер</string>
    <string name="listOfAddedString">Список добавленных</string>
    <string name="addButton">Добавить</string>
    <string name="delButton">Удалить</string>
    <string name="clearButton">Очистить</string>
    <string name="saveButton">Сохранить</string>
    <string name="titleListOfOrders">Список расходных накладных за сегодня</string>
    <string name="delSelectedButton">Удалить выбранные</string>
    <string name="synchSelectedButton">Синхронизировать выбранные</string>
    <string name="synchAllButton">Синхронизировать все</string>
    <string name="dellAllButton">Удалить все</string>
    <string name="saveToFileButton">Сохранить выбранные в файл</string>
    <string name="statusColumnTitle">Статус</string>
    <string name="typeColumnTitle">Тип</string>
    <string name="dateColumnTitle">Дата</string>
    <string name="pokupatelColumnTitle">Покупатель</string>
    <string name="sellPointColumnTitle">Торговая точка</string>
    <string name="kolvoPackegesColumnTitle">Кол-во пакетов</string>
    <string name="newStatusName">Новая</string>
    <string name="synchedStatusName">Синхронизировано</string>
    <string name="errorStatusName">Ошибка синхронизации</string>
    <string name="inProgressStatusName">Не завершенная</string>
    <string name="typeOfNakladnayaString">Типы накладных</string>
    <string name="typeOfNakladnayaPString">П - Стартовые пакеты</string>
    <string name="typeOfNakladnayaVString">В - Ваучеры пополнения счёта</string>
    <string name="typeOfNakladnayaPStringShort">П</string>
    <string name="typeOfNakladnayaVStringShort">В</string>
    <string name="error_from_less_to">Первый серийный номер не должен быть больше второго</string>
    <string name="error_invalidSerialNumber">Некорректный серийный номер</string>
    <string name="errorSerialNumberIsExist">Серийный номер уже существует</string>
    <string name="error_max_interval">Диапазон больше разрешенных </string>
    <string name="status_new">Новая</string>
    <string name="status_synchronized">Синхр.</string>
    <string name="status_with_errors">Ошибка</string>
    <string name="delling_some_sale_orders_dialog_title">Вы действительно хотите удалить накладные?</string>
    <string name="delling_all_sale_orders_dialog_title">Вы действительно хотите удалить все накладные?</string>
    <string name="buyer">Покупатель</string>
    <string name="incorrect_answer_of_server_message">Некорректный ответ сервера</string>
    <string name="error_message">Ошибка:\n</string>
    <string name="sales_orders_are_saved_to_file_message">"Накладные успешно сохранены в файл "</string>
    <string name="saving_error_message">При сохранении накладных возникла ошибка\n</string>
    <string name="selling_sale_orders_dialog_title">Сохранение накладных</string>
    <string name="error_description_title">Описание ошибок</string>

</resources>