<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simcard.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/main_activity_notice"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/activity_form_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/newVaucherButton"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/newVaucherButtonString"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/newPacketButton"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/newPacketButtonString"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/listOfAllButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/listOfAllNewButtonString"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/listOfAllSyncButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/listOfAllSynhButtonString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/exitButtonString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>