<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simcard.ListOfAllActivity" >

    <!--
         <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/titleListOfOrders"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/activity_form_text_size" />
    -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delSelectedButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/delSelectedButton" />

        <Button
            android:id="@+id/synchSelectedButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/synchSelectedButton" />

        <Button
            android:id="@+id/synchAllButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/synchAllButton" />

        <Button
            android:id="@+id/dellAllButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/dellAllButton" />

        <Button
            android:id="@+id/saveToFileButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/saveToFileButton" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:paddingTop="1dp" >

            <TextView
                android:id="@+id/column1TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/column_weight1"
                android:background="#dbdbdb"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:textColor="@android:color/black" />
            
         

            <CheckBox
                android:id="@+id/checkBoxAll"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:layout_weight="@integer/column_weight2"
                android:background="#dbdbdb"
                android:gravity="center_horizontal|top"
                android:padding="5dp" />

            <!--
                 <TextView
                android:id="@+id/column2TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/column_weight2"
                android:background="#dbdbdb"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:textColor="@android:color/black" />
            -->

            <TextView
                android:id="@+id/column3TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/column_weight3"
                android:background="#dbdbdb"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:text="Статус"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/column4TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="@integer/column_weight4"
                android:background="#dbdbdb"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:text="Тип"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/column5TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="@integer/column_weight5"
                android:background="#dbdbdb"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:text="Дата"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/column6TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="@integer/column_weight6"
                android:background="#dbdbdb"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:text="Покупатель"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/column7TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="@integer/column_weight7"
                android:background="#dbdbdb"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:text="Торговая точка"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/column8TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="@integer/column_weight8"
                android:background="#dbdbdb"
                android:gravity="center"
                android:lines="@integer/table_header_lines"
                android:padding="5dp"
                android:text="Кол-во пакетов"
                android:textColor="@android:color/black" />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/listOFSaleOrdersListView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border_ui" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/typeOfNakladnayaString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/activity_form_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:text="@string/typeOfNakladnayaPString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/activity_form_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:text="@string/typeOfNakladnayaVString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/activity_form_text_size" />

</LinearLayout>